# backend

./: Cargo.toml  README.MD
handlers/: real_time_location.rs
src/: config.rs  main.rs
src/models/: driver_model.rs  mod.rs  ride_model.rs  user_model.rs
src/services/: driver_services.rs  mod.rs  rider_services.rs
