[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-actors = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
mongodb = { version = "3.0.0-beta" }
redis = { version = "0.22.0", features = ["aio"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
